--- a/views/index.html
+++ b/views/index.html
@@ -11,13 +11,30 @@
       <b>Your Name</b><br>
       100 followers
     </div>
+    <div>
+      {% if showForm %}
+        <form action="/tweets" method="POST">
+          <label for="name_field">Name:</label>
+          <input name="name" {% if name %} value = {{name}} {% endif %} type="text" id="name_field" />
+
+          <label for="text_field">Text:</label>
+          <input name="text" type="text" id="text_field" style="width: 350px;" />
+
+          <input type="submit" value="Submit" />
+        </form>
+      {% endif %}
+    </div>
+
+
+
     <div class="col-md-9">
 
       <!-- display tweets here -->
       {% for tweet in tweets %}
         <div class = 'tweetbox'>
           <img></img>
-          <h5 class = 'content by'>{{tweet.name}}</h5>
+          <h5 class = 'content by'>
+            <a href="/users/{{tweet.name}}">{{tweet.name}}</a></h5>
           <li class = 'content'>{{tweet.content}}</li>
           <a class = 'content' href = 'http://lorempixel.com/128/128'>Re-tweet</a>
         </div>
